--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.2.1"
   },
   "dependencies": {
+    "@frontendmasters/pet": "^1.0.3",
     "parcel": "^1.12.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
